<resources>

    <string name="app_name" translatable="false">ForcedOffline</string>

    <string name="action_search">Search</string>
    <string name="action_start">Start</string>
    <string name="action_stop">Stop</string>
    <string name="action_show_checked">Show checked apps</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="failed_to_initialize_vpn">Failed to initialize VPN service</string>
    <string name="no_app_selected_to_run">Select at least one app to run</string>

    <string name="stop_to_configure">Stop to configure</string>
    <string name="about_text">Basic lightweight application firewall</string>
    <string name="visit_github">Visit GitHub</string>
    <string name="notification_text">Firewall is running</string>

    <string name="pref_theme">Theme</string>
    <string-array name="theme_entries">
        <item>Automatically</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <string name="pref_start_on_boot">Start on boot</string>
    <string name="pref_start_on_boot_description">If firewall was running before</string>

</resources>